[gd_scene load_steps=6 format=2]

[ext_resource path="res://Decision/Decision.gd" type="Script" id=1]
[ext_resource path="res://Utilities/CustomButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Dungeon.png" type="Texture" id=4]
[ext_resource path="res://Actors/Images/Tara.png" type="Texture" id=5]
[ext_resource path="res://Sound Effects/BoostMagic.wav" type="AudioStream" id=6]

[node name="Decision" type="Node"]
script = ExtResource( 1 )
backgroundTexture = ExtResource( 4 )
currentActorTexture = ExtResource( 5 )
firstChoice = "Go Left"
secondChoice = "Go Right"

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 181 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="CurrentActor" type="Sprite" parent="."]
position = Vector2( 273, 125 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
hframes = 2

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="CenterContainer" parent="UI"]
margin_left = 18.0
margin_top = 269.0
margin_right = 618.0
margin_bottom = 329.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/Panel"]
margin_left = 25.0
margin_top = 6.0
margin_right = 575.0
margin_bottom = 54.0
custom_constants/hseparation = 68
columns = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FirstChoiceButton" parent="UI/Panel/GridContainer" instance=ExtResource( 3 )]
margin_right = 232.0
margin_bottom = 48.0
text = "First Choice"

[node name="SecondChoiceButton" parent="UI/Panel/GridContainer" instance=ExtResource( 3 )]
margin_left = 300.0
margin_right = 550.0
margin_bottom = 48.0
text = "Second Choice"

[node name="ChoiceMadeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
pitch_scale = 0.8
[connection signal="pressed" from="UI/Panel/GridContainer/FirstChoiceButton" to="." method="_on_FirstChoiceButton_pressed"]
[connection signal="pressed" from="UI/Panel/GridContainer/SecondChoiceButton" to="." method="_on_SecondChoiceButton_pressed"]
